# metnum-tp02

./: .gitignore  README.md  TODO.txt  requierments.txt
borrador_informe/: Extension_potencia  extension_potencia (1).py  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc
borrador_informe/files/: opcional_potencia_conclusiones.slspec
experimentos/: club_de_karate.py  ego_facebook.py  error_potencia.py  op_autovalor_repetido.py  op_convergencia.py  op_deflacion.py  op_mismo_absoluto.py  op_todos_diferentes.py
experimentos/base/: IO.py  utils.py
implementacion/: CMakeLists.txt  main.cpp
implementacion/src/: IO.h  grafo.h  matriz.h  potencia.h  run.h  vector.h
implementacion/src/impl/: IO.cpp  IO.hpp  grafo.hpp  matriz.hpp  potencia.hpp  run.cpp  run.hpp  vector.cpp  vector.hpp
implementacion/src/impl/matriz/: matriz_base.cpp  matriz_sim.cpp
implementacion/src/matriz/: matriz_sim.h
implementacion/tests/: matriz-tests.cpp  potencia-tests.cpp
implementacion/tests/tests-generados/: diagonal_1.txt  diagonal_10.txt  diagonal_2.txt  diagonal_3.txt  diagonal_4.txt  diagonal_5.txt  diagonal_6.txt  diagonal_7.txt  diagonal_8.txt  diagonal_9.txt  householder_1.txt  householder_10.txt  householder_2.txt  householder_3.txt  householder_4.txt  householder_5.txt  householder_6.txt  householder_7.txt  householder_8.txt  householder_9.txt  sdp_1.txt  sdp_10.txt  sdp_2.txt  sdp_3.txt  sdp_4.txt  sdp_5.txt  sdp_6.txt  sdp_7.txt  sdp_8.txt  sdp_9.txt  simetrico.txt
informe/: main.tex
informe/files/: citations.bib  comandos_utiles.txt
(+39 files in other folders)
